--- a/package.json
+++ b/package.json
@@ -1,35 +1,13 @@
 {
     "private": true,
+    "type": "module",
     "scripts": {
-        "dev": "npm run development --watch",
-        "development": "mix",
-        "watch": "mix watch",
-        "watch-poll": "mix watch -- --watch-options-poll=1000",
-        "hot": "mix watch --hot",
-        "prod": "npm run production",
-        "production": "mix --production"
+        "dev": "vite",
+        "build": "vite build"
     },
     "devDependencies": {
-        "axios": "^0.18",
-        "cross-env": "^5.1",
-        "laravel-mix": "^6.0.49",
-        "lodash": "^4.17.5",
-        "resolve-url-loader": "^2.3.1",
-        "sass": "^1.15.2",
-        "sass-loader": "^12.1.0",
-        "webpack-cli": "^5.1.1"
-    },
-    "dependencies": {
-        "bootstrap": "^5.2.3"
-    },
-    "name": "my-blog",
-    "description": "<p align=\"center\"><a href=\"https://laravel.com\" target=\"_blank\"><img src=\"https://raw.githubusercontent.com/laravel/art/master/logo-lockup/5%20SVG/2%20CMYK/1%20Full%20Color/laravel-logolockup-cmyk-red.svg\" width=\"400\" alt=\"Laravel Logo\"></a></p>",
-    "version": "1.0.0",
-    "main": "vite.config.js",
-    "directories": {
-        "test": "tests"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC"
+        "axios": "^1.6.4",
+        "laravel-vite-plugin": "^1.0.0",
+        "vite": "^5.0.0"
+    }
 }
